--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,4 +1,4 @@
-
+*{margin:0%; padding: 0%;}
 .Nav-Bar {background-color: #84A59D;
           display: flex;
           justify-content: space-between;
